# head1d

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: compare_alpha.py  heat1d_solver.py  visualize.py  visualize_2d.py
src/: main.cpp
